--- a/intro_python.ipynb
+++ b/intro_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2F+cMVye1kveeKkT6IzSq",
+      "authorship_tag": "ABX9TyN8MMtlsRkZyi2SjDVgOctk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +28,63 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jo0dPa4IOikK"
+      },
+      "source": [
+        "<a id='contents'></a>\n",
+        "# Contents\n",
+        "[1. Import libraries and settings](#import) <br>\n",
+        "[2. Read data and create datasets](#read) <br>\n",
+        "[3. Development by company](#dev) <br>\n",
+        "&emsp;&emsp;[3.1 Nielsen](#dev_nielsen) <br> \n",
+        "&emsp;&emsp;&emsp;&emsp;[3.1.1 Export Nielsen](#exp_nielsen) <br> \n",
+        "&emsp;&emsp;[3.2 FreeWheel](#dev_freewheel) <br> \n",
+        "&emsp;&emsp;&emsp;&emsp;[3.2.1 Export FreeWheel](#exp_freewheel) <br> \n",
+        "&emsp;&emsp;[3.3 Kusa](#dev_kusa) <br> \n",
+        "&emsp;&emsp;&emsp;&emsp;[3.3.1 Export Kusa](#exp_kusa) <br> \n",
+        "&emsp;&emsp;[3.4 KDVR](#dev_kdvrn) <br> \n",
+        "&emsp;&emsp;&emsp;&emsp;[3.4.1 Export KDVR](#exp_kdvr) <br> \n",
+        "&emsp;&emsp;[3.5 Denver ABC - KMGH](#dev_denver) <br> \n",
+        "&emsp;&emsp;&emsp;&emsp;[3.5.1 Export Denver ABC - KMGH](#exp_denver) <br> "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "WwWQUJHMMcwh"
+        "id": "M0CRWge3Ogz8"
       },
       "source": [
         ""
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WwWQUJHMMcwh",
+        "outputId": "be687f23-c81d-4aee-ca87-0d4c5710626b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
+      },
+      "source": [
+        "http://colab.research.google.com/#create=true"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-0fa227229a3a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    http://colab.research.google.com/#create=true\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     }
   ]
 }
