--- a/intro_python.ipynb
+++ b/intro_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN8MMtlsRkZyi2SjDVgOctk",
+      "authorship_tag": "ABX9TyMRGh3alV/nugRpXZXmvAUH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       "source": [
         "<a id='contents'></a>\n",
         "# Contents\n",
-        "[1. Import libraries and settings](#import) <br>\n",
+        "[1. Tipos de Datos](#import) <br>\n",
         "[2. Read data and create datasets](#read) <br>\n",
         "[3. Development by company](#dev) <br>\n",
         "&emsp;&emsp;[3.1 Nielsen](#dev_nielsen) <br> \n",
@@ -51,40 +51,117 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HcRvcWCDcCdO"
+      },
+      "source": [
+        "### 1. Tipos de Datos"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gw7GgX2ub-Fq"
+      },
+      "source": [
+        "Existen distintos tipos de variables:\n",
+        "- int: entero\n",
+        "- float: punto flotante\n",
+        "- string: cadena de caracteres\n",
+        "- bool: booleano, 0, 1, True o False\n",
+        "\n",
+        "Y estructuras de datos, como:\n",
+        "  - list: lista de elementos (de cualquier tipo, incluida otra lista)\n",
+        "  - dict: \"diccionario\", conjunto de pares llave:valor"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AP8aPXykb7Nr"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "M0CRWge3Ogz8"
+      },
+      "source": [
+        "a_int = 5\n",
+        "a_float = 17\n",
+        "a_string = 'variable de ejemplo'\n",
+        "a_bool = True\n",
+        "a_int_in_string = \"10\""
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QShPAD9qcr8F",
+        "outputId": "c709de27-d5d4-4640-ed5a-90dda94dbbbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(a_int)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LiYl7dRxc3nw",
+        "outputId": "f4034c10-4ce6-4328-df8d-bc9fefbdb62a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(a_int_in_string)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vXho4K09c5da"
       },
       "source": [
         ""
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WwWQUJHMMcwh",
-        "outputId": "be687f23-c81d-4aee-ca87-0d4c5710626b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        }
-      },
-      "source": [
-        "http://colab.research.google.com/#create=true"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-0fa227229a3a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    http://colab.research.google.com/#create=true\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
     }
   ]
 }
