--- a/intro_python.ipynb
+++ b/intro_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMRGh3alV/nugRpXZXmvAUH",
+      "authorship_tag": "ABX9TyOF6R++4K3ULwyP71oF+PmN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       "source": [
         "<a id='contents'></a>\n",
         "# Contents\n",
-        "[1. Tipos de Datos](#import) <br>\n",
+        "[1. Inteligencia Artificial y Python](#_01) <br>\n",
         "[2. Read data and create datasets](#read) <br>\n",
         "[3. Development by company](#dev) <br>\n",
         "&emsp;&emsp;[3.1 Nielsen](#dev_nielsen) <br> \n",
@@ -49,6 +49,37 @@
         "&emsp;&emsp;[3.5 Denver ABC - KMGH](#dev_denver) <br> \n",
         "&emsp;&emsp;&emsp;&emsp;[3.5.1 Export Denver ABC - KMGH](#exp_denver) <br> "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<a id='_01'></a>\n",
+        "## 1. Inteligencia Artificial y Python\n",
+        "[Contents](#contents) \n",
+        "\n",
+        "#### Big Data:\n",
+        "*   Apacke Spark (https://spark.apache.org/)\n",
+        "*   Hadoop (https://hadoop.apache.org)\n",
+        "*   Dask (https://dask.org)\n",
+        "\n",
+        "#### Inteligencia Artificial:\n",
+        "Algoritmos para que las computadoras puedan tener comportamientos similares a los humanos, categorizaciones de imagenes, reconocimiento de patrones, PNL y otros. \n",
+        "\n",
+        "*   Scikit-learn (https://scikit-learn.org/)\n",
+        "\n",
+        "#### Deep learning: \n",
+        "Algoritmos de aprendizaje automático para analizar datos expresados de forma matricial o tensorial mediante capas de redes neuronales, en la mayoría de los casos no necesitan intervención humana para su aprendizaje.\n",
+        "\n",
+        "*   TensorFlow (https://www.tensorflow.org/)\n",
+        "*   CNTK (https://www.docs.microsoft.com/es-es/cognitive-toolkit/)\n",
+        "*   Theano (https://py.pi.org/project/Theano/)\n",
+        "\n",
+        "Estos tres frameworks pueden ser utilizados facilmente por la libreria Keras (https://keras.io)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Ul8J4DrgpU_l"
+      }
     },
     {
       "cell_type": "markdown",
@@ -97,7 +128,7 @@
         "a_bool = True\n",
         "a_int_in_string = \"10\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +143,7 @@
       "source": [
         "type(a_int)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +169,7 @@
       "source": [
         "type(a_int_in_string)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
