--- a/intro_python.ipynb
+++ b/intro_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOW3FDPA/UHNJWjoWPVe8mq",
+      "authorship_tag": "ABX9TyO+Zri9wU0I/Z9e0h3A0JkO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1512,12 +1512,12 @@
         "'Frase con \"comillas\" dobles'"
       ],
       "metadata": {
-        "id": "hD_a9L43GWHs",
-        "outputId": "f5a125c8-462c-4ef6-e90d-f8a08a76c31c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "hD_a9L43GWHs",
+        "outputId": "f5a125c8-462c-4ef6-e90d-f8a08a76c31c"
       },
       "execution_count": 60,
       "outputs": [
@@ -1543,12 +1543,12 @@
         " ... Haciendo uso del carácter \\\\ para separar las frases'"
       ],
       "metadata": {
-        "id": "9dO3E-hDGd99",
-        "outputId": "36d134e3-6978-4486-dfb6-d9828fda28fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "9dO3E-hDGd99",
+        "outputId": "36d134e3-6978-4486-dfb6-d9828fda28fc"
       },
       "execution_count": 63,
       "outputs": [
@@ -1573,12 +1573,12 @@
         "'''Frase con comillas 'simples' y \"dobles\" '''"
       ],
       "metadata": {
-        "id": "_URcL_SXG-3s",
-        "outputId": "0e185fd1-f238-48e7-d2b0-22a967440039",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "_URcL_SXG-3s",
+        "outputId": "0e185fd1-f238-48e7-d2b0-22a967440039"
       },
       "execution_count": 65,
       "outputs": [
@@ -1630,11 +1630,11 @@
         "'Piraña'.encode()"
       ],
       "metadata": {
-        "id": "l6gECJt8HTN7",
-        "outputId": "6616cc9e-327d-4ebc-b4f2-767c5ed0ab01",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l6gECJt8HTN7",
+        "outputId": "6616cc9e-327d-4ebc-b4f2-767c5ed0ab01"
       },
       "execution_count": 66,
       "outputs": [
@@ -1656,12 +1656,12 @@
         "str(b'Pira\\xc3\\xb1a', encoding='utf-8')"
       ],
       "metadata": {
-        "id": "E5GW1-gnJdwD",
-        "outputId": "22cc6d86-7e25-46af-8c8d-26f000431b86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "E5GW1-gnJdwD",
+        "outputId": "22cc6d86-7e25-46af-8c8d-26f000431b86"
       },
       "execution_count": 68,
       "outputs": [
@@ -1686,12 +1686,12 @@
         "str(b'Pira\\xc3\\xb1a', encoding='latin-1')"
       ],
       "metadata": {
-        "id": "BXDr_SY5Jl-8",
-        "outputId": "36ded547-6221-43a7-f212-9d9f11ef83f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "BXDr_SY5Jl-8",
+        "outputId": "36ded547-6221-43a7-f212-9d9f11ef83f7"
       },
       "execution_count": 69,
       "outputs": [
@@ -1716,12 +1716,12 @@
         "str(b'Pira\\xc3\\xb1a', encoding='ascii', errors = 'replace')"
       ],
       "metadata": {
-        "id": "3tg5wqN_KcLj",
-        "outputId": "bbee68ef-7502-4d5a-f52f-76f0aa4f5836",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "3tg5wqN_KcLj",
+        "outputId": "bbee68ef-7502-4d5a-f52f-76f0aa4f5836"
       },
       "execution_count": 73,
       "outputs": [
@@ -1746,12 +1746,12 @@
         "str(b'Pira\\xc3\\xb1a', encoding='ascii', errors = 'ignore')"
       ],
       "metadata": {
-        "id": "IVJJ9GdfKCrS",
-        "outputId": "a62ed029-1221-4cb0-ac8e-d971397f0c57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "IVJJ9GdfKCrS",
+        "outputId": "a62ed029-1221-4cb0-ac8e-d971397f0c57"
       },
       "execution_count": 72,
       "outputs": [
@@ -1797,11 +1797,11 @@
         "b.casefold() == c.casefold()"
       ],
       "metadata": {
-        "id": "7WOUit67MHbK",
-        "outputId": "453b9cad-8181-40ce-b74f-4f9594bf0594",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7WOUit67MHbK",
+        "outputId": "453b9cad-8181-40ce-b74f-4f9594bf0594"
       },
       "execution_count": 75,
       "outputs": [
@@ -1835,6 +1835,70 @@
       "metadata": {
         "id": "ztR-fnhuMR_r"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "txt = \"salamanca\"\n",
+        "x = txt.startswith(\"sala\")\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "xKK7dYV6DePw",
+        "outputId": "e790485a-2847-48a0-80be-c04ce09c1141",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Traducciones, reemplazos y mapeos"
+      ],
+      "metadata": {
+        "id": "RvXi2122Fesv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cadena = \"patata\"\n",
+        "t = cadena.removeprefix(\"pa\")\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "id": "N5ba183nfbuO",
+        "outputId": "beef4e77-3067-4e15-8a40-fd13ef3bddec",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-208e03b0b368>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcadena\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"patata\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcadena\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremoveprefix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"pa\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'removeprefix'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
