--- a/intro_python.ipynb
+++ b/intro_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN1pzZKj1MugXUZ8mi0rj6Y",
+      "authorship_tag": "ABX9TyPWu0KeKUPXikHlFdUqrwzy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1883,7 +1883,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1907,7 +1907,7 @@
         "id": "0-1txWN-YgLQ",
         "outputId": "007fb40f-71d0-440f-9eb6-484bf4a4bde9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1937,7 +1937,7 @@
         },
         "outputId": "e51b46fc-d27c-4f3a-ea3c-d034c46f728e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1975,7 +1975,7 @@
         "id": "Z7vDKRVkYp_M",
         "outputId": "6b07ca77-606d-4546-c546-f4a8e0dcc33f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2000,7 +2000,7 @@
         "id": "b5WeGjqjZj6t",
         "outputId": "16502db2-3e95-4d93-c14b-7fb717c8c8e3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2030,7 +2030,7 @@
         "id": "YfhPk7OfZyxc",
         "outputId": "ace36879-8e3c-456e-93e9-4ad11d2c8d95"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2060,7 +2060,7 @@
         "id": "xjvqRv0saCoL",
         "outputId": "9674f25b-7112-4cf2-f065-a9c76fd409f7"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2090,7 +2090,7 @@
         "id": "Pi0vxlz7aKrr",
         "outputId": "4114482b-6e46-4f9e-cffe-1357d5b18e5a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2128,7 +2128,7 @@
         "id": "feCyoIjQaPwd",
         "outputId": "4a16b044-8a8b-4345-8e8a-4d5cefd56c3a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2154,7 +2154,7 @@
         "id": "fCcziYKRamwq",
         "outputId": "44b9f950-b5da-4e9c-835d-e767b8690b31"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2180,7 +2180,7 @@
         "id": "RaTNynp-aseD",
         "outputId": "a2caf525-4b85-41af-bf52-5476b4f63e23"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2206,7 +2206,7 @@
         "id": "MQtbP-NvaxAh",
         "outputId": "533915e8-5f48-4f4f-e07d-6864f1634527"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2232,7 +2232,7 @@
         "id": "SCwEJWaHbDXT",
         "outputId": "d6e05cf4-2e3c-4cdb-c069-0ddcd32caaa1"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2254,7 +2254,7 @@
       "metadata": {
         "id": "QBGeSZHqbLmT"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2269,7 +2269,7 @@
         "id": "AqYvFYB8bmJL",
         "outputId": "53d40e01-aa63-40a0-f8e0-e8d3532f9c32"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2294,7 +2294,7 @@
         "id": "n-oyVcJfbnCT",
         "outputId": "56c52efd-3d2e-46c6-cdb1-4f133d010e26"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2320,7 +2320,7 @@
         "id": "MyJQvtEJb5aj",
         "outputId": "8d3e4b04-d562-49d7-df9e-2e0e9e94edd3"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2346,7 +2346,7 @@
         "id": "HJU5jT7WcmAv",
         "outputId": "76c80a3c-46f6-4c5e-b225-276211c8d8c9"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2372,7 +2372,7 @@
         "id": "SO1-u6oKdAiq",
         "outputId": "b9519270-f279-4062-eb11-f46e8022f055"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2399,7 +2399,7 @@
         "id": "rNYKKqCUdFHb",
         "outputId": "48174c23-b564-4582-f986-8567891cdbe7"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2429,7 +2429,7 @@
         "id": "94n3uWaLddyC",
         "outputId": "ce35a7d0-f3d5-466e-8fa7-e60b47dbc92c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2459,7 +2459,7 @@
         "id": "lv4iNBL8dl0a",
         "outputId": "ff174ecb-0e4f-43b7-8bfc-8768e73900bf"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2489,7 +2489,7 @@
         "id": "bRqSDvhXeKvi",
         "outputId": "09cc838a-5f81-4d3b-d1a0-7a24b122d712"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2519,7 +2519,7 @@
         "id": "mcrBWnINeOMa",
         "outputId": "3c069d63-8f35-43df-9d95-35559d642f6e"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2549,7 +2549,7 @@
         "id": "Dn5JMmtheRnr",
         "outputId": "d3cfc7a4-d40b-4d87-ebff-4033a09b123e"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2579,7 +2579,7 @@
         "id": "oPC5mqCBeU8r",
         "outputId": "6f679fb7-e5eb-48ae-d835-db1e7315dfee"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2609,7 +2609,7 @@
         "id": "jgj5KUnreaA7",
         "outputId": "2b69e363-2705-4192-e560-6e956511837c"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2639,7 +2639,7 @@
         "id": "r4MpVE7NeeOc",
         "outputId": "c239a730-ea0e-4fc0-d7fe-0ca702484c36"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2669,7 +2669,7 @@
         "id": "AHesoxQpehfj",
         "outputId": "2614cffe-6840-4a4f-efe6-dffba9b149d6"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2699,7 +2699,7 @@
         "id": "-jwsDh1_eotC",
         "outputId": "d07a58d9-4816-41f2-cfef-28b7834e164c"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2729,7 +2729,7 @@
         "id": "jecEPGHGerSK",
         "outputId": "cb2d5796-4c2c-4990-f5a6-21eb274f5bd1"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2759,7 +2759,7 @@
         "id": "uDu7UaGee9zX",
         "outputId": "313e671c-0166-45b6-abc7-1ff5fb27e222"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2789,7 +2789,7 @@
         "id": "bCsfh-D_f4v6",
         "outputId": "4a44aa3c-02de-48b7-b1df-8e4b5a8eb0c1"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2822,7 +2822,7 @@
         "id": "c-SN5JyXgOPy",
         "outputId": "7f3bd0f6-71d4-4475-e0d2-3b55a26793cd"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2852,7 +2852,7 @@
         "id": "90ZGpq5Vgu5C",
         "outputId": "c92ca223-6aac-48c8-859c-cb73f4523eb9"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2879,7 +2879,7 @@
       "metadata": {
         "id": "I_0-_x7Cg7xC"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2895,7 +2895,7 @@
         "id": "GThXj_eEh6qL",
         "outputId": "32710d41-bfad-41e8-873e-8c23b7c2082f"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2925,7 +2925,7 @@
         "id": "Biw043WtiGpC",
         "outputId": "f3b6aac7-6e69-49d1-e682-ab7e9ef12c44"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2955,7 +2955,7 @@
         "id": "qYzFqDgLih9C",
         "outputId": "f0033f57-f55e-4f3c-900a-47511b13fa57"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2998,7 +2998,7 @@
       "metadata": {
         "id": "-wNRPOQ2i75B"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3015,7 +3015,7 @@
           "height": 35
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3045,7 +3045,7 @@
           "height": 35
         }
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3076,7 +3076,7 @@
           "height": 35
         }
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3106,7 +3106,7 @@
           "height": 35
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3138,7 +3138,7 @@
           "height": 35
         }
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3169,7 +3169,7 @@
           "height": 35
         }
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3200,7 +3200,7 @@
           "height": 35
         }
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3230,7 +3230,7 @@
           "height": 35
         }
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3260,7 +3260,7 @@
           "height": 35
         }
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3292,7 +3292,7 @@
           "height": 35
         }
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3322,7 +3322,7 @@
           "height": 35
         }
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3352,7 +3352,7 @@
           "height": 35
         }
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3372,10 +3372,53 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def multiply(a, b, bound):\n",
+        "  # write your code here\n",
+        "  res=a * b\n",
+        "  if res > bound:\n",
+        "    raise ValueError(f\"multiplication of {a} and {b} with bound {bound} not possible\")\n",
+        "  else:\n",
+        "    return res\n"
       ],
       "metadata": {
         "id": "Sh_-pTbU8XCi"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "multiply(2,5,18)"
+      ],
+      "metadata": {
+        "id": "ATHG_5aG9WIU",
+        "outputId": "4a814d2d-0532-4c38-bd54-82b1f13f470b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "65pHN9_T9s8W"
       },
       "execution_count": null,
       "outputs": []
